[gd_scene load_steps=4 format=3 uid="uid://qqfa6ngjymg3"]

[ext_resource type="Script" uid="uid://d0ngg5f72i3ay" path="res://scripts/menu.gd" id="1_vjb58"]
[ext_resource type="Theme" uid="uid://cs0dacdtiio8v" path="res://themes/my_theme.tres" id="1_yqeox"]
[ext_resource type="Texture2D" uid="uid://bjeye47piymlv" path="res://assets/table.png" id="3_con2f"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjb58")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -339.0
offset_right = 600.0
offset_bottom = 339.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_con2f")

[node name="MainMenu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yqeox")

[node name="Title" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -163.5
offset_top = 60.0
offset_right = 163.5
offset_bottom = 143.0
grow_horizontal = 2
theme = ExtResource("1_yqeox")
theme_type_variation = &"Title"
text = "Pool With Friends"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -109.5
offset_right = 108.0
offset_bottom = 109.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yqeox")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NameEntry" type="LineEdit" parent="MainMenu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_yqeox")
placeholder_text = "Enter Name Here:"

[node name="Host" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_yqeox")
text = "Host"

[node name="Join" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="MainMenu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter Code:"

[node name="Lobby" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Lobby"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 811.0
offset_top = 338.0
offset_right = -811.0
offset_bottom = -338.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Lobby/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Lobby/Panel/MarginContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="Lobby/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="Label" type="Label" parent="Lobby/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Lobby"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Lobby/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Team1Button" type="Button" parent="Lobby/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Join Team 1"

[node name="Team2Button" type="Button" parent="Lobby/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Join Team 2"

[node name="HBoxContainer" type="HBoxContainer" parent="Lobby/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="List1" type="VBoxContainer" parent="Lobby/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Lobby/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="List2" type="VBoxContainer" parent="Lobby/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="text_changed" from="MainMenu/MarginContainer/VBoxContainer/NameEntry" to="." method="_on_name_entry_text_changed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Lobby/Panel/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Lobby/Panel/MarginContainer/VBoxContainer/HBoxContainer2/Team1Button" to="." method="_on_team_1_button_pressed"]
[connection signal="pressed" from="Lobby/Panel/MarginContainer/VBoxContainer/HBoxContainer2/Team2Button" to="." method="_on_team_2_button_pressed"]
